# LongWhisper

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md
.codex/skills/commit-message/: SKILL.md
.codex/skills/commit-message/agents/: openai.yaml
.codex/skills/commit-message/references/: commit-template.md
docs/: cpp_cuda_inference_requirements.md  implement_layer_plan.md
include/longwhisper/: assets_config.h  dtype.h  vad.h  wav.h
src/: CMakeLists.txt  assets_config.cpp  dtype.cpp  gemm.cuh  preprocess.cuh  preprocess400_constants.cu  preprocess400_mel_constants.cu  vad.cpp  wav.cpp
src/preprocess/: fft400.cuh  fft400_constants.cu  frontend.cuh  frontend_cuda.cu  preprocess400_constants.cu  preprocess400_mel_constants.cu  preprocess_cuda.h
test_data_gen/: generate_librosa_vad_reference.py  pyproject.toml
tests/: CMakeLists.txt  assets_config_test.cpp  preprocess400_test.cu  preprocess_test.cu  vad_test.cpp  wav_test.cpp  whisper_preprocess_reference.cpp  whisper_preprocess_reference.h
tests/data/: RECITATION324_158.librosa_split.txt
tools/weights_converter/: README.md  pyproject.toml
tools/weights_converter/src/weights_converter/: cli.py
